--- a/src/components/CustomMap/Map.css
+++ b/src/components/CustomMap/Map.css
@@ -1,3 +1,26 @@
 .map-overflow {
   overflow-x: hidden;
+  position: relative;
+}
+
+.address {
+  position: absolute;
+  top: 0;
+  left: 30px;
+  height: 450px;
+  width: 150px;
+  text-align: center;
+  background-color: white;
+  text-align: center;
+  border: 1px solid #979797;
+  padding: 12px;
+  margin: auto;
+}
+
+.address h3 {
+  color: #F4511E;
+}
+
+.col-overgrow {
+  flex-grow: 1.5 !important;
 }
