--- a/src/components/Hours/Hours.css
+++ b/src/components/Hours/Hours.css
@@ -1,4 +1,23 @@
 .hours-sec h2 {
   margin: 0;
+  margin-bottom: 30px;
   text-align: center;
+  font-weight: bold;
+  color: #F4511E;
+}
+
+.hours {
+  display: flex;
+}
+
+.hours h3 {
+  flex: 1;
+  text-align: left;
+  font-size: 20px;
+}
+
+.hours p {
+  flex: 1;
+  text-align: right;
+  font-size: 18px;
 }
