--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ body, html {
   padding: 5px 30px;
 }
 
+.container-spacing {
+  padding: 30px 30px;
+}
+
 .col-2 {
   flex: 1;
   padding: 0px 30px;
@@ -23,8 +27,41 @@ body, html {
   margin: 25px 0px;
 }
 
-.col-2:nth-of-type(1) {
-  flex-grow: 1.5;
+input, textarea {
+  display: block;
+  width: 99%;
+  margin: auto;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1.2px solid #979797;
+  border-radius: 2px;
+  margin: 20px 3px;
+}
+
+.btn {
+  display: inline-block;
+  height: 38px;
+  width: 100%;
+  padding: 0 30px;
+  color: white;
+  text-align: center;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  box-sizing: border-box;
+  background-color: #F4511E;
 }
 
 
