--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body, html {
 
 .container-spacing {
   padding: 50px 30px;
+  margin-bottom: 15px;
 }
 
 .col-2 {
@@ -65,7 +66,7 @@ input, textarea {
 }
 
 
-@media (max-width: 1024px) {
+@media (max-width: 765px) {
   .container {
     display: block;
   }
